@@ -5,25 +5,19 @@ import com.redis.om.spring.metamodel.MetamodelField;
 import com.redis.om.spring.ops.RedisModulesOperations;
 import com.redis.om.spring.ops.search.SearchOperations;
 import com.redis.om.spring.tuple.Tuples;
-import io.redisearch.AggregationResult;
-import io.redisearch.aggregation.AggregationBuilder;
-import io.redisearch.aggregation.Group;
-import io.redisearch.aggregation.SortedField;
-import io.redisearch.aggregation.reducers.Reducer;
-import io.redisearch.aggregation.reducers.Reducers;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NonNull;
 import org.springframework.data.domain.Sort.Order;
+import redis.clients.jedis.search.aggr.*;
 
+import java.time.Duration;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
   private final AggregationBuilder aggregation;
-  private Long aggregationTimeout;
   private Group currentGroup;
-  private Optional<ReducerFieldPair> currentReducer = Optional.empty();
+  private ReducerFieldPair currentReducer;
 
   private final SearchOperations<String> search;
   private final Set<String> returnFields = new LinkedHashSet<>();
@@ -34,7 +28,7 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
     private MetamodelField<?, ?> field;
   }
 
-  public AggregationStreamImpl(String searchIndex, RedisModulesOperations<String> modulesOperations, String query,
+  @SafeVarargs public AggregationStreamImpl(String searchIndex, RedisModulesOperations<String> modulesOperations, String query,
       MetamodelField<E, ?>... fields) {
     search = modulesOperations.opsForSearch(searchIndex);
     aggregation = new AggregationBuilder(query);
@@ -66,47 +60,27 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
       applyCurrentReducer();
       Reducer r = null;
       switch (reducer) {
-        case COUNT:
-          r = Reducers.count();
-          break;
-        case COUNT_DISTINCT:
-          r = Reducers.count_distinct(field.getSearchAlias());
-          break;
-        case COUNT_DISTINCTISH:
-          r = Reducers.count_distinctish(field.getSearchAlias());
-          break;
-        case SUM:
-          r = Reducers.sum(field.getSearchAlias());
-          break;
-        case MIN:
-          r = Reducers.min(field.getSearchAlias());
-          break;
-        case MAX:
-          r = Reducers.max(field.getSearchAlias());
-          break;
-        case AVG:
-          r = Reducers.avg(field.getSearchAlias());
-          break;
-        case STDDEV:
-          r = Reducers.stddev(field.getSearchAlias());
-          break;
-        case QUANTILE:
+        case COUNT -> r = Reducers.count();
+        case COUNT_DISTINCT -> r = Reducers.count_distinct(field.getSearchAlias());
+        case COUNT_DISTINCTISH -> r = Reducers.count_distinctish(field.getSearchAlias());
+        case SUM -> r = Reducers.sum(field.getSearchAlias());
+        case MIN -> r = Reducers.min(field.getSearchAlias());
+        case MAX -> r = Reducers.max(field.getSearchAlias());
+        case AVG -> r = Reducers.avg(field.getSearchAlias());
+        case STDDEV -> r = Reducers.stddev(field.getSearchAlias());
+        case QUANTILE -> {
           double percentile = Double.parseDouble(params[0]);
           r = Reducers.quantile(field.getSearchAlias(), percentile);
-          break;
-        case TOLIST:
-          r = Reducers.to_list(field.getSearchAlias());
-          break;
-        case FIRST_VALUE:
-          r = Reducers.first_value(field.getSearchAlias());
-          break;
-        case RANDOM_SAMPLE:
+        }
+        case TOLIST -> r = Reducers.to_list(field.getSearchAlias());
+        case FIRST_VALUE -> r = Reducers.first_value(field.getSearchAlias());
+        case RANDOM_SAMPLE -> {
           int sampleSize = Integer.parseInt(params[0]);
           r = Reducers.random_sample(field.getSearchAlias(), sampleSize);
-          break;
+        }
       }
       if (r != null) {
-        currentReducer = Optional.of(ReducerFieldPair.of(r, field));
+        currentReducer = ReducerFieldPair.of(r, field);
       }
 
     }
@@ -114,9 +88,9 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
   }
 
   private void applyCurrentReducer() {
-    if (currentReducer.isPresent()) {
-      Reducer cr = currentReducer.get().getReducer();
-      MetamodelField<?, ?> crField = currentReducer.get().getField();
+    if (currentReducer != null) {
+      Reducer cr = currentReducer.getReducer();
+      MetamodelField<?, ?> crField = currentReducer.getField();
       if (cr.getAlias() == null) {
         cr.setAlias(cr.getName().toLowerCase());
       }
@@ -138,7 +112,9 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
   }
 
   @Override public AggregationStream<T> as(String alias) {
-    this.currentReducer.ifPresent(reducerFieldPair -> reducerFieldPair.getReducer().setAlias(alias));
+    if (currentReducer != null) {
+      currentReducer.getReducer().setAlias(alias);
+    }
     return this;
   }
 
@@ -159,13 +135,12 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
   private List<String> extractAliases(Order[] fields) {
     return Arrays.stream(fields) //
         .map(f -> f.getProperty().startsWith("@") ? f.getProperty().substring(1) : f.getProperty()) //
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private SortedField[] mapToSortedFields(Order... fields) {
     return Arrays.stream(fields) //
-        .map(f -> f.isDescending() ? SortedField.desc(f.getProperty()) : SortedField.asc(f.getProperty())) //
-        .collect(Collectors.toList()) //
+        .map(f -> f.isDescending() ? SortedField.desc(f.getProperty()) : SortedField.asc(f.getProperty())).toList() //
         .toArray(SortedField[]::new);
   }
 
@@ -193,6 +168,22 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
     return search.aggregate(aggregation);
   }
 
+  @Override public AggregationResult aggregateVerbatim() {
+    aggregation.verbatim();
+    return search.aggregate(aggregation);
+  }
+
+  @Override public AggregationResult aggregate(Duration timeout) {
+    aggregation.timeout(timeout.toMillis());
+    return search.aggregate(aggregation);
+  }
+
+  @Override public AggregationResult aggregateVerbatim(Duration timeout) {
+    aggregation.timeout(timeout.toMillis());
+    aggregation.verbatim();
+    return search.aggregate(aggregation);
+  }
+
   @Override public <R extends T> List<R> toList(Class<?>... contentTypes) {
     // execute the aggregation
     AggregationResult aggregationResult = search.aggregate(aggregation);
@@ -216,13 +207,13 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
           if (listContents != null) {
             if (listContents == String.class) {
               mappedValues.add(
-                  rawList.stream().map(e -> e != null ? new String((byte[]) e) : "").collect(Collectors.toList()));
+                  rawList.stream().map(e -> e != null ? new String((byte[]) e) : "").toList());
             } else if (listContents == Long.class) {
               mappedValues.add(rawList.stream().map(e -> e != null ? Long.parseLong(new String((byte[]) e)) : 0L)
-                  .collect(Collectors.toList()));
+                  .toList());
             } else if (listContents == Double.class) {
               mappedValues.add(rawList.stream().map(e -> e != null ? Double.parseDouble(new String((byte[]) e)) : 0)
-                  .collect(Collectors.toList()));
+                  .toList());
             } else {
               mappedValues.add(rawList);
             }
@@ -234,69 +225,59 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
 
       Object[] values = mappedValues.toArray();
 
-      switch (labels.length) {
-        case 1:
-          return Tuples.of(labels, values[0]);
-        case 2:
-          return Tuples.of(labels, values[0], values[1]);
-        case 3:
-          return Tuples.of(labels, values[0], values[1], values[2]);
-        case 4:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3]);
-        case 5:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4]);
-        case 6:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5]);
-        case 7:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6]);
-        case 8:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7]);
-        case 9:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8]);
-        case 10:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9]);
-        case 11:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10]);
-        case 12:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11]);
-        case 13:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12]);
-        case 14:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13]);
-        case 15:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13], values[14]);
-        case 16:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15]);
-        case 17:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
-              values[16]);
-        case 18:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
-              values[16], values[17]);
-        case 19:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
-              values[16], values[17], values[18]);
-        case 20:
-          return Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6],
-              values[7], values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
-              values[16], values[17], values[18], values[19]);
-
-        default:
-          return Tuples.of();
-      }
-    }).collect(Collectors.toList());
+      return switch (labels.length) {
+        case 1 -> Tuples.of(labels, values[0]);
+        case 2 -> Tuples.of(labels, values[0], values[1]);
+        case 3 -> Tuples.of(labels, values[0], values[1], values[2]);
+        case 4 -> Tuples.of(labels, values[0], values[1], values[2], values[3]);
+        case 5 -> Tuples.of(labels, values[0], values[1], values[2], values[3], values[4]);
+        case 6 -> Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5]);
+        case 7 -> Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6]);
+        case 8 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7]);
+        case 9 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8]);
+        case 10 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9]);
+        case 11 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10]);
+        case 12 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11]);
+        case 13 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12]);
+        case 14 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13]);
+        case 15 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13], values[14]);
+        case 16 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15]);
+        case 17 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
+                values[16]);
+        case 18 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
+                values[16], values[17]);
+        case 19 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
+                values[16], values[17], values[18]);
+        case 20 ->
+            Tuples.of(labels, values[0], values[1], values[2], values[3], values[4], values[5], values[6], values[7],
+                values[8], values[9], values[10], values[11], values[12], values[13], values[14], values[15],
+                values[16], values[17], values[18], values[19]);
+        default -> Tuples.of();
+      };
+    }).toList();
     return (List<R>) asList;
   }
 
@@ -322,25 +303,13 @@ public class AggregationStreamImpl<E, T> implements AggregationStream<T> {
 
   private Class<?> getTypeHintForReducer(Reducer cr, MetamodelField<?, ?> field) {
     Class<?> fieldTargetClass = field != null ? field.getTargetClass() : null;
-    switch (cr.getName()) {
-      case "COUNT":
-      case "COUNT_DISTINCT":
-      case "COUNT_DISTINCTISH":
-        return Long.class;
-      case "SUM":
-      case "MIN":
-      case "MAX":
-      case "QUANTILE":
-      case "FIRST_VALUE":
-      case "TOLIST":
-      case "RANDOM_SAMPLE":
-        return fieldTargetClass != null ? fieldTargetClass : String.class;
-      case "AVG":
-      case "STDDEV":
-        return Double.class;
-      default:
-        return String.class;
-    }
+    return switch (cr.getName()) {
+      case "COUNT", "COUNT_DISTINCT", "COUNT_DISTINCTISH" -> Long.class;
+      case "SUM", "MIN", "MAX", "QUANTILE", "FIRST_VALUE", "TOLIST", "RANDOM_SAMPLE" ->
+          fieldTargetClass != null ? fieldTargetClass : String.class;
+      case "AVG", "STDDEV" -> Double.class;
+      default -> String.class;
+    };
   }
 
 }
